# emcg

./: .travis.yml  CMakeLists.txt  README.md
cmake/: defaults.cmake
src/: CMakeLists.txt
src/function/: CMakeLists.txt  function.cpp  function.hpp
src/glh/: CMakeLists.txt  glh.h
src/plot/: CMakeLists.txt  plot.cpp
src/point/: CMakeLists.txt  point.cpp
src/racional/: CMakeLists.txt  racional.cpp  racional.hpp
src/rational/: CMakeLists.txt  rational.cpp  rational.hpp  t.rational.cpp
src/vector/: CMakeLists.txt  t.vector.cpp  vector.hpp
